docs/archive/2026-01-04_test_results.txt
============================= test session starts =============================
platform win32 -- Python 3.13.5, pytest-9.0.1, pluggy-1.6.0 -- C:\Users\bichn\MSBA\SEC finetune\venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\bichn\MSBA\SEC finetune
configfile: pyproject.toml
plugins: anyio-4.11.0, cov-7.0.0
collecting ... collected 406 items / 1 error

============================================================
Test outputs saved to: tests\outputs\20251228_144841_pytest_648bf25
============================================================


=================================== ERRORS ====================================
_________ ERROR collecting tests/unit/test_validation_integration.py __________
venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\miniconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
venv\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
venv\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\..\miniconda3\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\bichn\MSBA\SEC finetune\tests\unit\test_validation_integration.py", line 260
E       from scripts.02_data_preprocessing.batch_parse import batch_parse_filings
E                      ^
E   SyntaxError: invalid decimal literal
=========================== short test summary info ===========================
ERROR tests/unit/test_validation_integration.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 6.04s ===============================
